--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_FRONT_BASE_URL=
 NEXT_PUBLIC_FRONT_API_URL='http://localhost:3001'
+NEXT_IMAGE_PREFIX='https://api.zaburdaev.space'
 NEXT_PUBLIC_FRONT_PROXY_API_URL=
 NEXT_PUBLIC_BASIC_AUTH_LOGIN=
 NEXT_PUBLIC_BASIC_AUTH_PASSWORD=
