--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "1.7",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@popperjs/core": "^2.11.8",
+    "@rjsf/chakra-ui": "^5.21.2",
+    "@rjsf/core": "^5.21.2",
+    "@rjsf/utils": "^5.21.2",
+    "@rjsf/validator-ajv8": "^5.21.2",
     "@sentry/nextjs": "^7.93.0",
     "@studio-freight/react-lenis": "^0.0.43",
     "@tanstack/react-query": "^5.45.1",
@@ -26,13 +34,14 @@
     "axios": "^1.6.5",
     "base-64": "^1.0.0",
     "body-scroll-lock-upgrade": "^1.1.0",
+    "chakra-react-select": "^5.0.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-next": "^0.0.0",
     "formik": "^2.4.3",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^5.6.0",
     "gsap": "^3.12.5",
     "next": "^14.2.0",
     "nookies": "^2.5.2",
