--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 NEXT_PUBLIC_FRONT_BASE_URL=
 NEXT_PUBLIC_FRONT_API_URL='http://localhost:3001'
-NEXT_IMAGE_PREFIX='https://api.zaburdaev.space'
-NEXT_PUBLIC_FRONT_PROXY_API_URL=
-NEXT_PUBLIC_BASIC_AUTH_LOGIN=
-NEXT_PUBLIC_BASIC_AUTH_PASSWORD=
+NEXT_IMAGE_PREFIX='http://localhost:3001'
+NEXT_PUBLIC_FRONT_PROXY_API_URL='/api/proxy'
+NEXT_PUBLIC_BASIC_AUTH_LOGIN='ek5bgjz49ryj'
 UNOPTIMIZED_IMAGES=0
 ENABLE_SENTRY=0
 SENTRY_DSN=
