--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,9 @@
     "react/jsx-filename-extension": "off",
     "import/order": "off",
     "no-empty-pattern": "off",
-    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-unused-vars": "off",
+    "no-useless-catch": "off",
+    "prefer-const": "off",
     "react/react-in-jsx-scope": "off",
     "import/no-extraneous-dependencies": "off",
     "@typescript-eslint/no-explicit-any": "off",
